Closed Bug 501878 Opened 15 years ago Closed 15 years ago

"ASSERTION: Text node has a frame and NS_CREATE_FRAME_IF_NON_WHITESPACE" with SVG, abs pos

Categories

(Core :: Layout, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: roc)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(2 files)

Attached image testcase
###!!! ASSERTION: Text node has a frame and NS_CREATE_FRAME_IF_NON_WHITESPACE: '!mPresShell->GetPrimaryFrameFor(content)', file /Users/jruderman/central/layout/base/nsCSSFrameConstructor.cpp, line 6159 This assertion was added in bug 500556.
Assignee: nobody → roc
Attached patch fixSplinter Review
Trivial.
Attachment #386639 - Flags: superreview?(bzbarsky)
Attachment #386639 - Flags: review?(bzbarsky)
Comment on attachment 386639 [details] [diff] [review] fix Looks good, but that XXX comment after this code is wrong with the changes to use two bits, right? Can you fix it or remove it?
Attachment #386639 - Flags: superreview?(bzbarsky)
Attachment #386639 - Flags: superreview+
Attachment #386639 - Flags: review?(bzbarsky)
Attachment #386639 - Flags: review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: