Bug 501878. Don't suppress whitespace-only SVG text frames. r+sr=bzbarsky